# GravitationalPotential

./: CMakeLists.txt  README.md  algorithms.cpp  algorithms.h  gravAlgorithms.cpp  gravAlgorithms.h  localOrthogonalSystem.cpp  localOrthogonalSystem.h  main.cpp  matrix.cpp  matrix.h  model.cpp  model.h  sortByLatitude.cpp  sortByLatitude.h
